kibana/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
spec:
  ports:
  - name: http
    port: 5601
    targetPort: 5601
  selector:
    app: kibana
